# MotorMarket

./: .dockerignore  .env.example  API_DOCUMENTATION.md  Dockerfile  README.md  add_subs.py  docker-compose.yml  pyproject.toml
Admin/: settings.py
Admin/panel/: admin.py  apps.py  models.py
Admin/panel/migrations/: 0001_initial.py  0002_listing_body_type_listing_drive_type.py  0002_user_groups_user_is_staff_user_is_superuser_and_more.py  0003_alter_listingmedia_table_alter_savedlisting_table.py
app/: celery.py  config.py  database.py  dependensies.py  main.py  models.py  utils.py
app/routers/: __init__.py  category.py  conversation.py  listing.py  saved_listing.py  user.py
app/schemas/: __init__.py  category.py  conversation.py  listing.py  saved_listing.py  user.py
files(2)/: README.md  auth.html  chat.html  create.html  edit.html  index.html  listing.html  profile.html  saved.html
files(2)/css/: style.css
files(2)/js/: api.js  auth.js  chat.js  create.js  edit.js  home.js  listing.js  profile.js  saved.js  ui.js
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ListingCard.jsx  ListingCard.module.scss  Navbar.jsx  Navbar.module.scss  Toast.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Auth.jsx  Auth.module.scss  Chat.jsx  Chat.module.scss  CreateListing.jsx  CreateListing.module.scss  Home.jsx  Home.module.scss  ListingDetail.jsx  ListingDetail.module.scss  Profile.jsx  Saved.jsx
frontend/src/styles/: _mixins.scss  (+2 more)
