[project]
name = "velodrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "fastapi[all]>=0.137.1",
    "jwt>=1.4.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-jose>=3.5.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
]
